fix(FF-4582): add project and organization middle truncate, workspaces fit the content

--- a/packages/header/src/helperComponents/Select/styles.modules.scss
+++ b/packages/header/src/helperComponents/Select/styles.modules.scss
@@ -67,10 +67,21 @@
 .selectGroup {
   height: 320px;
   box-sizing: border-box;
-  padding: $dimension-050m $dimension-1m;
+  padding: 0 $dimension-1m;
 
   display: flex;
+  align-items: stretch;
+  flex-direction: row;
+  max-width: 100vw;
+}
+
+.selectGroupScroll {
+  display: flex;
+  box-sizing: border-box;
+  padding: $dimension-050m 0;
+  height: 100%;
   gap: $dimension-1m;
   align-items: stretch;
   flex-direction: row;
+  width: max-content;
 }
